# Semi-PD

./: README.md
SwiftTransformer/: CMakeLists.txt
SwiftTransformer/src/: CMakeLists.txt
SwiftTransformer/src/csrc/: CMakeLists.txt  pybinding.cc
SwiftTransformer/src/csrc/kernel/: CMakeLists.txt  addbias.cu  addbias.h  count_nan.cu  count_nan.h  embedding.cu  embedding.h  findmax.cu  findmax.h  fused_activ_multiply.cu  fused_activ_multiply.h  fused_addbias_activ.cu  fused_addbias_activ.h  fused_context_stage_attention.cu  fused_context_stage_attention.h  fused_decoding_stage_attention.cu  fused_decoding_stage_attention.h  fused_decoding_stage_attention_mha.cu  gather_last_tokens.cu  gather_last_tokens.h  kvcache_mgmt.cu  kvcache_mgmt.h  layernorm.cu  layernorm.h  rmsnorm.cu  rmsnorm.h  rotary_posi_embedding.cu  rotary_posi_embedding.h  softmax.cu  softmax.h  unfused_attention.cu  unfused_attention.h  xformers_attention.cu  xformers_attention.h
SwiftTransformer/src/csrc/kernel/flash_attn/: flash_api.cpp  flash_attn.cu  flash_attn.h
SwiftTransformer/src/csrc/layer/: CMakeLists.txt  attention.cc  attention.h  ffn.cc  ffn.h  gated_ffn.cc  gated_ffn.h
SwiftTransformer/src/csrc/model/gpt/: gpt.cc  gpt.h  gpt_base.h  gpt_hyper_param.h  gpt_parallelism_param.h  gpt_weight.cc  gpt_weight.h  gptop_base.cc  gptop_base.h
SwiftTransformer/src/csrc/model/gpt/llama2/: llama2op.cc  llama2op.h
SwiftTransformer/src/csrc/util/: CMakeLists.txt  cublas_wrapper.h  nccl_utils.cc  nccl_utils.h  py_block_migration.cc  py_block_migration.h  py_kernel.cc  py_kernel.h
SwiftTransformer/src/examples/: CMakeLists.txt
SwiftTransformer/src/examples/lib/: common_gpt_hyper_params.h
SwiftTransformer/src/unittest/: CMakeLists.txt
distserve/: config.py  context_stage_scheduler.py  decoding_stage_scheduler.py  engine.py  models.py  single_stage_engine.py  unified_stage_scheduler.py  worker.py
distserve/downloader/: converter.py
evaluation/: benchmark_LLama_8B_baseline.sh  benchmark_LLama_8B_semi_pd.sh  benchmark_QwQ-32B_baseline.sh  benchmark_QwQ-32B_semi_pd.sh  show_result.py
evaluation/2-benchmark-serving/: 2-benchmark-serving.py  backend_request_func.py  benchmark_distserve.py
python/sglang/semi_pd/: utils.py
python/sglang/srt/entrypoints/: engine.py
python/sglang/srt/managers/: data_parallel_controller.py
python/sglang/srt/model_executor/: model_runner.py
